--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "bcrypt": "^5.1.0",
+    "font-awesome": "^4.7.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "next": "13.4.6",
