--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "bcrypt": "^5.1.0",
     "font-awesome": "^4.7.0",
+    "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "next": "13.4.6",
