--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "font-awesome": "^4.7.0",
     "jose": "^4.14.4",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
