--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "bcrypt": "^5.1.0",
+    "cookies-next": "^2.1.2",
+    "cors": "^2.8.5",
     "font-awesome": "^4.7.0",
     "jose": "^4.14.4",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
+    "limiter": "^2.1.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "next": "13.4.6",
