--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "limiter": "^2.1.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
-    "next": "13.4.6",
+    "next": "^14.2.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
