--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "limiter": "^2.1.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
+    "nanoid": "^5.0.9",
     "next": "^14.2.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
